<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".AddScienceActivity" >
	<com.ui.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></com.ui.TitleLayout>
	 <TextView
        android:text="@string/chinese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
	/>
    <EditText 
        android:id="@+id/addChinese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:hint="请输入语文成绩"
        />
     <TextView
        android:text="@string/math"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
	/>
    <EditText 
        android:id="@+id/addMath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:hint="请输入数学成绩"
        /> 
    <TextView
        android:text="@string/english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
	/>
    <EditText 
        android:id="@+id/addEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:hint="请输入外语成绩"
        /> 
    <TextView
        android:text="@string/physical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
	/>
    <EditText 
        android:id="@+id/addPhysical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:hint="请输入物理成绩"
        /> 
    <TextView
        android:text="@string/chemistry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
	/>
    <EditText 
        android:id="@+id/addChemistry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:hint="请输入化学成绩"
        /> 
    <TextView
        android:text="@string/biology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
	/>
    <EditText 
        android:id="@+id/addBiology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:hint="请输入生物成绩"
        /> 
    <Button 
        android:id="@+id/addSGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="添加"
        />
</LinearLayout>
</ScrollView>