 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".AddGradeActivity" >
	<com.ui.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></com.ui.TitleLayout>
    <TextView
        android:text="@string/chinese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
	/>
    <EditText 
        android:id="@+id/addChinese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:hint="请输入语文成绩"
        />
     <TextView
        android:text="@string/math"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
	/>
    <EditText 
        android:id="@+id/addMath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:hint="请输入数学成绩"
        /> 
    <TextView
        android:text="@string/english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
	/>
    <EditText 
        android:id="@+id/addEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:hint="请输入外语成绩"
        /> 
    <TextView
        android:text="@string/politics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
	/>
    <EditText 
        android:id="@+id/addPolitics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:hint="请输入政治成绩"
        /> 
    <TextView
        android:text="@string/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
	/>
    <EditText 
        android:id="@+id/addHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:hint="请输入历史成绩"
        /> 
    <TextView
        android:text="@string/geography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
	/>
    <EditText 
        android:id="@+id/addGeography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:hint="请输入地理成绩"
        /> 
    <Button 
        android:id="@+id/addGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="添加"
        />
    
</LinearLayout>
</ScrollView>